<resources>
    <string name="app_name">Game</string>
    <string name="game_which">Which One Is Number</string>
    <string name="game_speed">Speed Match</string>
    <string name="user_points">Your Points : %d</string>
    <string name="game_level">Level %d out of %d</string>
    <string name="game_time">Remaining time : %d seconds</string>
    <string name="start_game">Start Game</string>
    <string name="confirm">Confirm</string>
    <string name="show_best_score">Show Best Score</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="both">Both</string>
    <string name="one">One</string>
    <string name="nothing">Nothing</string>
</resources>
