<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_backgound"
    android:padding="10dp"
    android:clickable="true">
    <TextView
    android:id="@+id/game_which"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/game_which"
        android:textSize="30sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/start_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_which"
        android:theme="@style/PrimaryButton"/>
    <Button
        android:id="@+id/best_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_best_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game"
        android:theme="@style/PrimaryButton"/>
    <FrameLayout
        android:id="@+id/frag_container"
        android:elevation="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>