<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_backgound"
    android:clickable="true">
    <LinearLayout
        android:id="@+id/game_container"

        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonforgame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
        <!--android:visibility="gone"-->
        <TextView
            android:id="@+id/tex_point"
            android:layout_width="match_parent"
            android:text="Your points 15 out of 17"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/first_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:id="@+id/secound_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonforgame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_container"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/both"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/both"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/nothing"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/nothing"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>